objects/PurchaseOrderLine__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnitNumber__c</fullName>
        <label>Business Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <formula>TEXT(PurchaseOrder__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullSegmentsNumber__c</fullName>
        <formula>Product__r.FullSegmentsNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Segments Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemBranchKey__c</fullName>
        <label>ItemBranchKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastStatus__c</fullName>
        <label>Last Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextStatus__c</fullName>
        <label>Next Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenCurrencyAmount__c</fullName>
        <label>Open Currency Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderAmount_EUR__c</fullName>
        <label>OpenOrderAmount_EUR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOrderAmount_LOCAL__c</fullName>
        <label>OpenOrderAmount_LOCAL</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenQty__c</fullName>
        <label>Open Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalPromisedDeliveryDate__c</fullName>
        <label>Original Promised Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_DetailKey__c</fullName>
        <externalId>true</externalId>
        <label>PO DetailKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PO_ExchangeRate__c</fullName>
        <label>PO Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_HeaderKey__c</fullName>
        <label>PO HeaderKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_ItemDescription2__c</fullName>
        <label>PO Item Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_ItemDescription__c</fullName>
        <label>PO Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_LandedCostRule__c</fullName>
        <label>PO Landed Cost Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Location__c</fullName>
        <label>PO Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_TaxRateArea__c</fullName>
        <label>PO Tax Rate Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromisedDeliveryDate__c</fullName>
        <label>Promised Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>Purchase Order Lines</relationshipLabel>
        <relationshipName>Purchase_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchasingUnitPrice__c</fullName>
        <label>Purchasing Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestedDate__c</fullName>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShortNumber__c</fullName>
        <label>Short Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierNumber__c</fullName>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Lines (Supplier)</relationshipLabel>
        <relationshipName>Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM__c</fullName>
        <label>U/M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Purchase Order Line</label>
    <nameField>
        <displayFormat>POL{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>